--- a/oss.css
+++ b/oss.css
@@ -923,6 +923,16 @@ footer a {
     flex-direction: column;
   }
 
+  /* logo osis&mpk */
+  .logo-osis {
+    width: 40;
+    height: 50;
+  }
+  .logo-mpk {
+    width: 60;
+    height: 50;
+  }
+
   .main-section,
   #home {
     padding: 2rem;
