--- a/oss.css
+++ b/oss.css
@@ -139,6 +139,7 @@ nav ul.dropdown {
 
 nav ul.dropdown li {
   display: block;
+  padding-bottom: 0;
 }
 
 nav a:hover {
@@ -925,12 +926,12 @@ footer a {
 
   /* logo osis&mpk */
   .logo-osis {
-    width: 40px;
-    height: 50px;
+    width: 70px;
+    height: 60px;
   }
   .logo-mpk {
     width: 60px;
-    height: 50px;
+    height: 40px;
   }
 
   /* text osis dan mpk */
@@ -953,6 +954,15 @@ footer a {
 
   #navbar-open {
     margin-right: 30px;
+  }
+
+  nav ul.dropdown li {
+    display: block;
+    margin-bottom: -15px;
+  }
+  /* text welcome */
+  .typed-text {
+    font-size: 50px;
   }
 
   .main-section,
