--- a/oss.css
+++ b/oss.css
@@ -301,7 +301,6 @@ nav li:hover ul.dropdown {
   background-repeat: no-repeat;
   border-bottom-right-radius: 20%;
   border-bottom-left-radius: 20%;
-
   text-align: center;
 }
 
@@ -386,6 +385,11 @@ nav li:hover ul.dropdown {
   background-repeat: no-repeat;
 }
 
+.main-section-project {
+  padding: 8rem;
+  min-height: 20vh;
+}
+
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(40ch, 1fr));
@@ -399,25 +403,36 @@ nav li:hover ul.dropdown {
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.705);
   border-radius: 0.5rem;
   overflow: hidden;
-  position: relative;
+  justify-content: center;
+  width: 100%;
 }
 
 .gallery img {
   max-width: 100%;
+  justify-content: center;
 }
 
 .img-title {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(5, 5, 5, 0.7);
+}
+section#project.main-section {
+  justify-content: center;
+  align-items: center;
 }
 
 /*Tugas Tugas*/
 .card-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(40ch, 100%), 1fr));
-  gap: 1rem;
+  gap: 2rem;
+  column-gap: 10pc;
+  justify-content: center;
+}
+.card-container-7 {
+  display: grid;
+  align-items: center;
   justify-content: center;
 }
 
@@ -441,13 +456,15 @@ nav li:hover ul.dropdown {
 }
 
 .card-title {
-  font-size: 28px;
+  justify-content: center;
+  text-align: center;
+  font-size: 30px;
   font-weight: bold;
   text-transform: capitalize;
 }
 
 .card-text {
-  font-size: 18px;
+  font-size: 15px;
   color: #ffffff;
 }
 
@@ -924,6 +941,23 @@ footer a {
   nav ul {
     flex-direction: column;
   }
+  .main-section__text h2 {
+    text-transform: capitalize;
+    text-transform: uppercase;
+    font-family: "Raleway", sans-serif;
+    font-weight: 1000;
+    line-height: 60px;
+    font-size: 30px;
+    text-align: center;
+  }
+  .card-title {
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    justify-content: center;
+    text-align: center;
+    text-transform: capitalize;
+  }
 
   /***********BIG MODIFITE *****************/
   #home .lead {
@@ -985,6 +1019,28 @@ footer a {
   /* text welcome */
   .typed-text {
     font-size: 50px;
+  }
+  .card-text {
+    font-size: 10px;
+    color: #ffffff;
+  }
+  article.card {
+    padding: 5px;
+  }
+  ol.card-text {
+    padding: 20px 10px 20px 20px;
+  }
+
+  .img {
+    margin: 0 20px 0 20px;
+  }
+  .img-title {
+    position: relative;
+  }
+
+  section#project.main-section {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 
   /*********** DONE BIG MODIFITE *****************/
